# The_bots

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
docs/: architecture.md  roadmap.md
src/trading_intelligence/: __init__.py  config.py  main.py
src/trading_intelligence/adapters/: README.md  __init__.py  mock_market_data.py  mt5_execution.py  mt5_market_data.py  paper_execution.py
src/trading_intelligence/agents/: __init__.py  learning_ai.py  news_ai.py  risk_ai.py  session_ai.py  signal_ai.py
src/trading_intelligence/application/: __init__.py  engine.py  pipeline.py
src/trading_intelligence/backtesting/: README.md  __init__.py
src/trading_intelligence/dashboard/: README.md  __init__.py
src/trading_intelligence/database/: README.md  __init__.py  sqlite_repository.py
src/trading_intelligence/domain/: __init__.py  models.py
src/trading_intelligence/interfaces/: __init__.py  ports.py
tests/: test_agents.py  test_pipeline.py
