[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-trading-intelligence"
version = "0.1.0"
description = "Standalone modular trading intelligence and execution-governance scaffold"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "ta>=0.11",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]
mt5 = ["MetaTrader5>=5.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/trading_intelligence"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
